Add Interpolação de dados no component
podemos add dados para usar dinamicamente em
nossos components dentro da class Button no component.ts.
Add os dados criando nome do atributo, tipo do dado(string ou button) e por fim o dado.
add o dado dinamicamente no component.html usando {{}}, como fizemos no button.component.html

--- a/my-app/src/app/components/button.component.html
+++ b/my-app/src/app/components/button.component.html
@@ -1,3 +1,23 @@
 <section>
-  <button>Clique Aqui</button>
+  <button>{{ buttonText }}</button>
+  
 </section>
+
+<!--Exemploo de Interpolação a baixo -->
+
+<!-- <section>
+  <button>{{ buttonNumber}}</button>
+</section> -->
+
+<!-- <section>
+  <button>{{ buttonTexts[0]}}</button>
+</section> -->
+
+<!-- <section>
+  <button>{{ buttonTexts[1]}}</button>
+</section> -->
+
+
+<!-- 
+  Os dados add dentro dos {{}} são enviados de dentro da class Button,  essa forma se chama interpolação de dados.
+ -->
