Fazendo o componente pai conversar com o filho
Add input no component filho, podemos add os dados pelo component pai e assim passar as propriedades diretamente no component dentro do app.component.html.

Dessa forma  conseguimos fazer eles se conversarem e passarem os dados  atributos desejados  no component.

Podemos declarar usando as duas formas recomendadas:
[label]="variavel"
label{{variavel}}

Ambas  podem ser usadas na hora de declarar.

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,6 +1,14 @@
 <main>
   <menu-component></menu-component>
-  <my-button></my-button>
-  
-  
+  <my-button [label]="buttonLabel"></my-button>
+  <my-button [label]="buttonAdd"></my-button>
+  <my-button label={{buttonRemove}}></my-button>
+    
 </main>
+
+<!-- 
+  Podemos declarar usando as duas formas recomendadas:
+    [label]="variavel"
+    label{{variavel}}
+
+-->
