--- a/my-app/src/app/components/button.component.css
+++ b/my-app/src/app/components/button.component.css
@@ -1,5 +1,10 @@
 button {
   margin: 0.25rem;
   padding: 0.5rem;
-  
+  border: rgb(240, 200, 23) solid;
+  border-radius: 0.5rem;
+  background-color: rgb(240, 200, 23);
+  font-weight: 700;
+  font-family: sans-serif;
+  font-size: 1rem;
 }
