Formas de passar valores direto nos parametros
Add exemplos de como podemos passar um valor diretamente no parâmetro.

Deixei destacado as formas recomendadas de usar, para qualquer duvida pesquisar por data binding que é nada mais nada menos que as formas que podemos passar os  valores nos parametros.

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -2,7 +2,15 @@
   <menu-component></menu-component>
   <my-button [label]="buttonLabel"></my-button>
   <my-button [label]="buttonAdd"></my-button>
+  
+  <!-- recomendada -->
   <my-button label={{buttonRemove}}></my-button>
+  
+  <!-- Inputando o valor direto no parametro  -->
+  <!-- recomendada -->
+  <my-button label="Remover Item"></my-button> 
+
+  <my-button [label]="'Adicionar'"></my-button>
     
 </main>
 
@@ -10,5 +18,6 @@
   Podemos declarar usando as duas formas recomendadas:
     [label]="variavel"
     label{{variavel}}
-
+  
+  Isso é um conceito de data binding
 -->
