Two Way Data Binding
Usando Two Way para pegar valores no input e repassar para outra tag.

Para pegar o que esta sendo escrito usamos o [value]="parametro".

  Já para receber esse valor e escrever ele no paragrafo a baixo usamos (input)="parametro"

  Dentro dele tem um $any que serve para escrever qualquer expressão JS dentro dele, com isso podemos usar a expressão ($event.target).value

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -11,6 +11,8 @@
   <my-button label="Remover Item"></my-button> 
 
   <my-button [label]="'Adicionar'"></my-button>
+
+  <entry-data></entry-data>
     
 </main>
 
