Forma simplificada usando ngModel
Podemos usar o ngModel para repassar os parametros usando ngModel dentro de [()], exemplo [(ngModel)]="parametro"

Precisamos importar o formsModule no nosso app.module.ts (linha 3).
E chama-lo junto dos imports (linha 22).

Sem essa chamada o ngModel não funciona

--- a/my-app/src/app/components/data.component.html
+++ b/my-app/src/app/components/data.component.html
@@ -1,9 +1,19 @@
 <section>
+  <!-- Two Way forma mais manual -->
   <label for="">Escreva algo</label>
   <input type="text" [value]="placeHolder"
   (input)="placeHolder = $any($event.target).value">
 
   <p>{{ placeHolder }}</p>
+
+</section>
+
+<!-- Forma simplificada usando ngModel -->
+<section>
+  <label for="">Escreva algo</label>
+  <input type="text" [(ngModel)]="placePass">
+
+  <p>{{ placePass }}</p>
 
 </section>
 
